--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,14 +23,14 @@ repos:
           - id: black
             exclude: ^migrations/
             language_version: python3
-#    - repo: https://github.com/adrienverge/yamllint.git
-#      rev: v1.33.0  # or higher tag
-#      hooks:
-#          - id: yamllint
-#            exclude: ^\.github/
-#            args: [--format, parsable, --strict]
-#
-#    - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-#      rev: 0.2.3    # or other specific tag
-#      hooks:
-#          - id: yamlfmt
+    - repo: https://github.com/adrienverge/yamllint.git
+      rev: v1.33.0  # or higher tag
+      hooks:
+          - id: yamllint
+            exclude: ^\.github/
+            args: [--format, parsable, --strict]
+
+    - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+      rev: 0.2.3    # or other specific tag
+      hooks:
+          - id: yamlfmt
